  in MediaWiki 1.26, have now been hard deprecated. This affects $wgUseTidy,
  $wgTidyBin, $wgTidyConf, $wgTidyOpts, $wgTidyInternal, and $wgDebugTidy. Use
  $wgTidyConfig instead.
* All Tidy configurations other than Remex have been hard deprecated;
  future parsers will not emit compatible output for these configurations.
* QuickTemplate::msgHtml() and BaseTemplate::msgHtml() have been deprecated
  as they promote bad practises. I18n messages should always be properly
  escaped.
* Skin::getDynamicStylesheetQuery() has been deprecated. It always
  returns action=raw&ctype=text/css which callers should use directly.
* Class LegacyFormatter is deprecated.
* Use of CommentStore::insertWithTempTable() with 'img_description' is
  deprecated. Use CommentStore::insert() instead.
* Language::setCode is deprecated as public function. Use Language::factory
  to create a new Language object with a different language code.
* Several classes have been moved from the MediaWiki\Storage\ namespace to the
  MediaWiki\Revision\ namespace. The old class names are aliased for
  compatibility, but are deprecated. Classes are IncompleteRevisionException,
  MutableRevisionRecord, MutableRevisionSlots, RevisionAccessException,
  RevisionArchiveRecord, RevisionFactory, RevisionLookup, RevisionRecord,
  RevisionSlots, RevisionStore, RevisionStoreRecord, SlotRecord, and
  SuppressedDataException.

=== Other changes in 1.32 ===
* (T198811) The following tables have had their UNIQUE indexes turned into
  proper PRIMARY KEYs for increased maintainability: interwiki, page_props,
  protected_titles and site_identifiers.
* OOUI HTMLForm will now display help text inline after the input field,
  rather than in a popup. Previous behavior can be restored by using
  `'help-inline' => false`.
* The archive table's ar_rev_id field is now unique.
* Special:BotPasswords now requires reauthentication.
* (T174023) Multi-Content Revision (MCR) capabilities were introduced into the